# axum-crud

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  axum_crud.db  build.rs  build.sh  makefile.toml
.github/workflows/: build.yaml  lint.yaml  release.yaml
doc/: 0x03.io.md  1. 项目搭建.md  2. 数据库配置.md  3. 用户接口.md  9. protobuf.md
idl/: feature.proto  request.proto
migrations/: 20211226101113_userinfos.sql
src/: lib.rs
src/cache/: ip.rs
src/database/: db.rs  user.rs
src/entity/: mod.rs  user.rs
src/extract/: pb.rs
src/fileio/: mod.rs  opfile.rs
src/infra/: httpcli.rs  mod.rs
src/pb/: bid.rs  feature.rs  mod.rs
src/routers/: ip.rs  mod.rs  user.rs
