[package]
edition = "2021"
name = "axum-crud"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
axum = {version = "0.4.3", features = ["http2", "default"]}
bytes = "1"
dashmap = "5.0.0"
dotenv = "0.15.0"
futures = "0.3"
futures-util = {version = "0.3", default-features = false, features = ["alloc"]}
hyper = {version = "0.14", features = ["full"]}
hyper-tls = "0.5.0"
jwt = "0.15.0"
mimalloc = "0.1.27"
rand = "0.8.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.5.9", features = ["runtime-tokio-native-tls", "macros", "sqlite", "chrono"]}
tokio = {version = "1.15.0", features = ["full"]}
tracing = "0.1.29"
tracing-subscriber = "0.3.4"
uuid = {version = "0.8", features = ["serde", "v4"]}

[build-dependencies]

[profile.dev]
debug = true
incremental = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
rpath = false
