[package]
edition = "2021"
name = "axum-crud"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.52"
axum = { version = "0.4.3", features = ["http2", "default"] }
bytes = "1"
chrono = "0.4"
clap = { version = "3.0.0", features = ["derive"] }
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
dashmap = "5.0.0"
dotenv = "0.15.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "alloc",
] }
jwt = "0.15.0"
lazy_static = "1.4.0"
mimalloc = "0.1.27"
rand = "0.8.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.5.9", features = [
    "runtime-tokio-native-tls",
    "macros",
    "sqlite",
    "chrono",
] }
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
prost = "0.9"
prost-types = "0.9"
mime = "0.3.16"

[build-dependencies]
prost-build = { version = "0.9" }
vergen = { version = "6.0", default-features = false, features = [
    "build",
    "git",
    "cargo",
    "rustc"
] }
anyhow = "1.0"


[profile.dev]
debug = true
incremental = true

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
rpath = false
